--- a/FlinkGmall2021/pom.xml
+++ b/FlinkGmall2021/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>org.example</groupId>
     <artifactId>FlinkGmall2021</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>gmall-logger</module>
+        <module>gmall-flink-cdc</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
