--- a/FlinkGmall2021/gmall-flink-cdc/pom.xml
+++ b/FlinkGmall2021/gmall-flink-cdc/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.75</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-planner-blink_2.12</artifactId>
+            <version>1.12.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
