--- a/util/kafka/docker-compose.yml
+++ b/util/kafka/docker-compose.yml
@@ -2,10 +2,10 @@ version: "3"
 services:
   zookeeper:
     image: 'bitnami/zookeeper:latest'
-    ports:
-      - '2181:2181'
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
+    networks:
+      - phoenix
   kafka:
     image: 'bitnami/kafka:latest'
     ports:
@@ -23,3 +23,8 @@ services:
       - KAFKA_INTER_BROKER_LISTENER_NAME=CLIENT
     depends_on:
       - zookeeper
+    networks:
+      - phoenix
+networks:
+  phoenix:
+    driver: bridge
