--- a/FlinkGmall2021/pom.xml
+++ b/FlinkGmall2021/pom.xml
@@ -162,6 +162,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-api-java-bridge_${scala.version}</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
