--- a/FlinkGmall2021/pom.xml
+++ b/FlinkGmall2021/pom.xml
@@ -12,13 +12,14 @@
         <module>gmall-logger</module>
         <module>gmall-flink-cdc</module>
         <module>gmall-realtime</module>
+        <module>gmall-realtime-new</module>
     </modules>
 
     <properties>
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <flink.version>1.12.0</flink.version>
+        <flink.version>1.13.0</flink.version>
         <scala.version>2.12</scala.version>
         <hadoop.version>3.1.3</hadoop.version>
     </properties>
@@ -49,6 +50,11 @@
             <artifactId>flink-connector-mysql-cdc</artifactId>
             <version>1.2.0</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.ververica</groupId>-->
+<!--            <artifactId>flink-connector-mysql-cdc</artifactId>-->
+<!--            <version>2.1.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka_${scala.version}</artifactId>
@@ -110,6 +116,11 @@
             <artifactId>flink-connector-jdbc_${scala.version}</artifactId>
             <version>${flink.version}</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>5.1.27</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.apache.phoenix</groupId>
             <artifactId>phoenix-spark</artifactId>
